added form functionality, mailto method

--- a/events.html
+++ b/events.html
@@ -1,87 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/style.css">
-  <title>Vet to Vet | Events</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./src/style.css" />
+    <title>Vet to Vet | Events</title>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase">
-        <a class="navbar-brand" href="./index.html">Vet to Vet</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" 
-                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                <li class="nav-item mr-lg-4">
-                <a class="nav-link" href="./volunteer.html">How to Help</a>
-                </li>
-                <li class="nav-item mr-lg-4">
-                <a class="nav-link active" href="./events.html">Events <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item mr-lg-4">
-                <a class="nav-link" href="./about.html">About Us</a>
-                </li>
-                <li class="nav-item mr-lg-4">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="./index.html">Vet to Vet</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbar"
+        aria-controls="navbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item mr-lg-4">
+            <a class="nav-link" href="./volunteer.html">How to Help</a>
+          </li>
+          <li class="nav-item mr-lg-4">
+            <a class="nav-link active" href="./events.html"
+              >Events <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item mr-lg-4">
+            <a class="nav-link" href="./about.html">About Us</a>
+          </li>
+          <li class="nav-item mr-lg-4">
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
-    <header class="jumbotron jumbotron-fluid bg-block mb-5" aria-hidden="true"></header>
+    <header
+      class="jumbotron jumbotron-fluid bg-block mb-5"
+      aria-hidden="true"
+    ></header>
 
-    <main class='mx-auto'>
-        <div class="container mb-5 p-5 px-md-0">
-            <h1>Join us for bingo games, barbeques, and holiday events.</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae
-                laoreet mauris, at blandit urna. Donec sit amet ullamcorper ex. Sed
-                faucibus leo nec posuere vestibulum. Aenean eu tortor quis quam. 
-            </p>
-        </div>
+    <main class="mx-auto">
+      <div class="container mb-5 p-5 px-md-0">
+        <h1>Join us for bingo games, barbeques, and holiday events.</h1>
+        <p>Check back frequently for upcoming events.</p>
+      </div>
 
-        <div class="container my-5 p-5 px-md-0">
-            <p>
-                Vet to Vet &reg; is an independent non-profit organization 501c3 founded by Vets and made up of Veterans and Civilians to help Veterans. 
-                Vet to Vet &reg; is not affiliated or associated with the "operation of Vet2Vet" located at 24 Homewood Ave, North Providence, RI.
-            </p>
-        </div>
+      <div class="container my-5 p-5 px-md-0">
+        <p>
+          Vet to Vet &reg; is an independent non-profit organization 501c3
+          founded by Vets and made up of Veterans and Civilians to help
+          Veterans. Vet to Vet &reg; is not affiliated or associated with the
+          "operation of Vet2Vet" located at 24 Homewood Ave, North Providence,
+          RI.
+        </p>
+      </div>
     </main>
 
     <section class="my-5">
-        <div class="container p-5 px-md-0 text-center">
-            <p class="mb-4">Show your support by donating today!</p>
-            <button class="btn btn-md small text-uppercase px-5">Donate</button>
-        </div>
+      <div class="container p-5 px-md-0 text-center">
+        <p class="mb-4">Show your support by donating today!</p>
+        <button class="btn btn-md small text-uppercase px-5">Donate</button>
+      </div>
     </section>
 
     <footer class="my-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-auto">
-                    <p>&copy; 2020 Vet to Vet &reg;. All rights reserved.</p>
-                    <p>Website by <a href="https://communitybuildingcoders.com" target="_blank">Community Building Coders</a>.</p>
-                </div>
-                <div class="col text-right">
-                    <a href="mailto:dcc@vettovetusa.com">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                            <path fill-rule="evenodd" d="M1.75 3A1.75 1.75 0 000 4.75v14c0 .966.784 1.75 1.75 1.75h20.5A1.75 1.75 0 0024 18.75v-14A1.75 1.75 0 0022.25 3H1.75zM1.5 4.75a.25.25 0 01.25-.25h20.5a.25.25 0 01.25.25v.852l-10.36 7a.25.25 0 01-.28 0l-10.36-7V4.75zm0 2.662V18.75c0 .138.112.25.25.25h20.5a.25.25 0 00.25-.25V7.412l-9.52 6.433c-.592.4-1.368.4-1.96 0L1.5 7.412z">
-                            </path>
-                        </svg>
-                    </a>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-auto">
+            <p>&copy; 2020 Vet to Vet &reg;. All rights reserved.</p>
+            <p>
+              Website by
+              <a href="https://communitybuildingcoders.com" target="_blank"
+                >Community Building Coders</a
+              >.
+            </p>
+          </div>
+          <div class="col text-right">
+            <a href="mailto:dcc@vettovetusa.com">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                width="24"
+                height="24"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M1.75 3A1.75 1.75 0 000 4.75v14c0 .966.784 1.75 1.75 1.75h20.5A1.75 1.75 0 0024 18.75v-14A1.75 1.75 0 0022.25 3H1.75zM1.5 4.75a.25.25 0 01.25-.25h20.5a.25.25 0 01.25.25v.852l-10.36 7a.25.25 0 01-.28 0l-10.36-7V4.75zm0 2.662V18.75c0 .138.112.25.25.25h20.5a.25.25 0 00.25-.25V7.412l-9.52 6.433c-.592.4-1.368.4-1.96 0L1.5 7.412z"
+                ></path>
+              </svg>
+            </a>
+          </div>
         </div>
+      </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
