--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
 
 
          <div class="container bg-block mb-5">
-             <form id="contact-form" onsubmit="handleSubmit()"  method="post" class="py-5 px-3">
+             <form id="contact-form" onsubmit="handleSubmit()" method='POST'   class="py-5 px-3">
                  <div class='form-group'>
                     <label class="form-control sr-only">Name</label>
-                    <input class='form-control'  placeholder="NAME *" name="input" id='fname' required />
+                    <input class='form-control'  placeholder="NAME *" name="input" id='firstName' required />
                  </div>
                  <div class='form-group'>
                     <label class="form-control sr-only">Company</label>
@@ -76,7 +76,7 @@
                     <textarea class='form-control' rows="8" name="input" placeholder="MESSAGE *" id='message' required></textarea>
                  </div>
                  <div class="form-group">
-                     <button class="btn btn-outline-secondary bg-block px-5" id='submit'>Send</button>
+                     <button class="btn btn-outline-secondary bg-block px-5" id='submit-btn'>Send</button>
                      <a href="" class="btn btn-link text-muted mx-5">Cancel</a>
                  </div>
              </form>
