working on mobile mailto

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
 
          <div class="container bg-block mb-5">
-             <form id="contact-form" onsubmit="handleSubmit()" method='POST' target="_blank"  class="py-5 px-3">
+             <form id="contact-form" onsubmit="handleSubmit()" method='POST'   class="py-5 px-3">
                  <div class='form-group'>
                     <label class="form-control sr-only">Name</label>
                     <input class='form-control'  placeholder="NAME *" name="input" id='firstName' required />
