--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,15 @@
 
 
          <div class="container bg-block mb-5">
-            <!-- onsubmit="handleSubmit()" -->
-             <form id="contact-form"  method='POST'   class="py-5 px-3" data-netlify="true">
+             <form id="contact-form"  method='POST'   class="py-5 px-3" action="https://kaitlinscandles.com/v2vsubmit.php">
+            <!-- Will need to change action to ./v2vsubmit.php when deployed -->
                  <div class='form-group'>
                     <label class="form-control sr-only">Name</label>
-                    <input class='form-control'  placeholder="NAME *" name="firstName" id='firstName' required />
+                    <input class='form-control'  placeholder="NAME *" name="name" id='firstName' required />
                  </div>
                  <div class='form-group'>
                     <label class="form-control sr-only">Company</label>
-                    <input class='form-control' placeholder="COMPANY *" name="lastName" id='company' />
+                    <input class='form-control' placeholder="COMPANY *" name="company" id='company' />
                  </div>
                  <div class='form-group'>
                     <label class="form-control sr-only">Email</label>
